--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./style.css" />
+    
     <title>OUR MODEL</title>
 </head>
 
 <body>
-    <div class="header">
+    <div data-wow-delay="0.1s"  class="header">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -58,16 +60,16 @@
         <div class="btn-bars">
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
-        <div class="title-page">
-            <div>
+        <div data-wow-delay="0.2s" class="title-page wow bounceInDown">
+            <div style="text-align: center;">
                 <div class="upperKey">Wordington Centre</div>
                 for Leadership and Management Development
             </div>
         </div>
     </div>
     </div>
-    <a class="aba" href="about-us.html">
-        <div class="about-us">
+    <a  class="aba"  href="about-us.html">
+        <div data-wow-delay="0.1s" class="about-us wow fadeInLeftBig">
             <div class="container ab">
                 <div class="ab-us">
                     ABOUT-US
@@ -75,14 +77,14 @@
             </div>
         </div>
     </a>
-    <div class="groundended">
+    <div data-wow-delay="0.4s" class="groundended">
         <img src="image/grounded.png" alt="">
     </div>
     <div class="textOurModel">
         <div class="titleOurModel">
             Wordington Model
         </div>
-        <div class="text-content">
+        <div data-wow-delay="0s" class="text-content wow fadeInUpBig">
             <div>The Wordington Model is the result of many years of extensive research. Our quest on a model that
                 would make education meaningful enabled us to think of ways and means to generate knowledge
                 from lived experiences. </div> <br>
@@ -106,7 +108,7 @@
             </div>
         </div>
     </div>
-    <div class="leadership">
+    <div data-wow-delay="0.3s" class="leadership wow flipInX">
         <div class="textLeadership">
             Wordington Leadership Programmes
         </div>
@@ -117,7 +119,7 @@
         </div>
         <div class="container">
             <div class="abc">
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div data-wow-delay="0s" class="col-xs-6 col-sm-12 col-md-6 ccc wow slideInLeft">
                     <a href="wordington-leadership-certificate-programme.html">
                         <div class="image">
                             <img src="image/image1.svg" alt="">
@@ -127,7 +129,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div data-wow-delay="0s" class="col-xs-6 col-sm-12 col-md-6 ccc wow slideInRight">
                     <a href="wordington-diploma-in-leadership-programme.html">
                         <div class="image">
                             <img src="image/image2.svg" alt="">
@@ -137,7 +139,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div data-wow-delay="0s" class="col-xs-6 col-sm-12 col-md-6 ccc wow slideInLeft">
                     <a href="wordington-master-of-leadership-programme.html">
                         <div class="image">
                             <img src="image/image3.svg" alt="">
@@ -147,7 +149,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div data-wow-delay="0s" class="col-xs-6 col-sm-12 col-md-6 ccc wow slideInRight">
                     <a href="wordington-doctorate-programme-in-leadership.html">
                         <div class="image">
                             <img src="image/image4.svg" alt="">
@@ -171,7 +173,7 @@
         </div>
         <div class="container">
             <div class="abc">
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div data-wow-delay="0s" class="col-xs-6 col-sm-12 col-md-6 ccc wow slideInDown">
                     <a href="wordington-certificate-programme-in-human-resource-management.html">
                         <div class="image">
                             <img src="image/image5.svg" alt="">
@@ -182,7 +184,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div data-wow-delay="0s" class="col-xs-6 col-sm-12 col-md-6 ccc wow slideInDown">
                     <a href="wordington-diploma-in-human-resource-management-programme.html">
                         <div class="image">
                             <img src="image/image6.svg" alt="">
@@ -192,7 +194,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div data-wow-delay="0s" class="col-xs-6 col-sm-12 col-md-6 ccc wow slideInDown">
                     <a href="wordington-master-of-human-resource-management-programme.html">
                         <div class="image">
                             <img src="image/image7.svg" alt="">
@@ -203,7 +205,7 @@
                     </a>
 
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div data-wow-delay="0s" class="col-xs-6 col-sm-12 col-md-6 ccc wow slideInDown">
                     <a href="wordington-doctorate-programme-in-human-resource-management.html">
                         <div class="image">
                             <img src="image/image8.svg" alt="">
@@ -227,7 +229,7 @@
         </div>
         <div class="container">
             <div class="abc">
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div class="col-xs-6 col-sm-12 col-md-6 ccc wow lightSpeedIn">
                     <a href="wordington-certificate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="image/image9.svg" alt="">
@@ -237,7 +239,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div class="col-xs-6 col-sm-12 col-md-6 ccc wow lightSpeedIn">
                     <a href="wordington-diploma-in-biblical-leadership.html">
                         <div class="image">
                             <img src="image/image10.svg" alt="">
@@ -247,7 +249,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div class="col-xs-6 col-sm-12 col-md-6 ccc wow lightSpeedIn">
                     <a href="wordington-graduate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="image/image11.svg" alt="">
@@ -258,7 +260,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 ccc">
+                <div class="col-xs-6 col-sm-12 col-md-6 ccc wow lightSpeedIn">
                     <a href="wordington-doctorate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="image/image12.svg" alt="">
@@ -279,7 +281,7 @@
         </div>
     </a>
     <div class="vvvv">
-        <div class="container">
+        <div class="container xcxxxx">
             <div class="col-xs-12 col-sm-12 col-md-8 zxc">
                 <a href="wordington-health-and-nursing-programmes.html">
                     <div class="nnnn">
@@ -301,7 +303,7 @@
         </div>
     </a>
     <div class="vvvv">
-        <div class="container">
+        <div class="container xcxxxx">
             <div class="col-xs-12 col-sm-12 col-md-8 zxc">
                 <a href="wordington-international-english-communication-programme.html">
                     <div class="nnnn">
@@ -336,18 +338,20 @@
     function closeMenu() {
         show.style.right = "-250px";
     }
+    new WOW().init();
     function scrollToElement(parentSelector, targetSelector, offsetTop) {
         $(parentSelector).animate({
             scrollTop: $(targetSelector).offset().top - (offsetTop ? offsetTop : 0)
         }, 400, function () {
         });
+        closeMenu();
     }
-    function scrollToElementNew(parentSelector, targetSelector, offsetTop) {
-        $(parentSelector).animate({
-            scrollTop: $(targetSelector).offset().top - (offsetTop ? offsetTop : 0) - $(targetSelector).height() / 5
-        }, 300, function () {
-        });
-    }
+    // function scrollToElementNew(parentSelector, targetSelector, offsetTop) {
+    //     $(parentSelector).animate({
+    //         scrollTop: $(targetSelector).offset().top - (offsetTop ? offsetTop : 0) - $(targetSelector).height() / 5
+    //     }, 300, function () {
+    //     });
+    // }
     function btnShowText() {
       var showText = document.getElementById('hideText');
       var hideBtn = document.getElementById('more');
