--- a/html/wordington-certificate-programme-in-biblical-studies.html
+++ b/html/wordington-certificate-programme-in-biblical-studies.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Diploma in Leadership Programme </title>
+    <title>Wordington Leadership Certificate Programme</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <link rel="stylesheet" href="./leaderShip.css">
+    <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader2">
+    <div class="itemHeader9">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -34,39 +34,51 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Leadership Programmes
+            Wordington Certificate Programme in Biblical Studies
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Graduate Diploma in Leadership</div>
+                <div class="title">Certificate Programmes </div>
                 <div>
-                    is aimed to equip candidates with
-                    agile skills to lead organisations and the society.
+                    Wordington Certificate Programme in Biblical studies is designed to
+                    develop and establish a strong foundation in selective knowledge,
+                    understanding and application of key Biblical concepts.
                 </div>
                 <div>
-                    Wordington graduate diploma programmes are suitable for people
-                    working in any profession and is a great opportunity to build up and
-                    boost your leadership skills.
-                </div>
-                <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of leadership styles so as to effectively lead others and
-                    their businesses and organisations.
-                </div>
-                <div>
-                    The Wordington graduate diploma in Leadership comprises of four units
-                    which can be credited towards Wordington Master of Leadership.
-                </div>
-                <div>
-                    The units offered are:
+                    
+                    Wordington offers a range of Certificate programmes for you to advance
+                    in Biblical studies. This programme is meant for beginners who are
+                    aiming to build their understanding of Biblical knowledge and build a
+                    ‘call-oriented’ career in Christian ministry. A few of the Certificate
+                    Programmes is listed below:
                 </div>
                 <div class="x-x-x">
-                    Ethics and Leadership. <br> <br>
-                    Leading Diversity. <br> <br>
-                    Leadership and Decision Making. <br> <br>
-                    Leading Teams. <br> <br>
+                    Wordington Certificate in: <br> <br>
+
+                    Introduction to Old Testament. <br> <br>
+
+                    Introduction to New Testament.<br> <br>
+
+                    The Gospel of Matthew.<br> <br>
+
+                    The Gospel of Mark.<br> <br>
+
+                    The Gospel of Luke.<br> <br>
+
+                    The Gospel of John.<br> <br>
+
+                    The Acts of Apostles.<br> <br>
+
+                    Introduction to Pauline Letters.<br> <br>
+
+                    The Letters of John.<br> <br>
+
+                    The Letters of Peter.<br> <br>
+
+                    The Letter of James.<br> <br>
+                    The Book of Revelations<br> <br>
                 </div>
             </div>
         </div>
