--- a/html/wordington-diploma-in-leadership-programme.html
+++ b/html/wordington-diploma-in-leadership-programme.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Diploma in Leadership Programme </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <link rel="stylesheet" href="./leaderShip.css">
+    <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader6">
+    <div class="itemHeader2">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -34,41 +34,39 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Graduate Diploma in Human Resource Management 
+            Wordington Leadership Programmes
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Graduate Diploma in Human Resource Management  </div>
+                <div class="title">Graduate Diploma in Leadership</div>
                 <div>
-                    is aimed to equip candidates with agile skills to lead the workforce in organisations.
+                    is aimed to equip candidates with
+                    agile skills to lead organisations and the society.
                 </div>
                 <div>
-                    Wordington graduate diploma programme is suitable for people working
-                    in any profession and is a great opportunity to build up and boost your
-                    HRM skills.
+                    Wordington graduate diploma programmes are suitable for people
+                    working in any profession and is a great opportunity to build up and
+                    boost your leadership skills.
                 </div>
                 <div>
                     The programme is suitable for those wishing to further develop their
-                    understanding of HRM so as to effectively manage people in
-                    organisations.
+                    understanding of leadership styles so as to effectively lead others and
+                    their businesses and organisations.
                 </div>
                 <div>
-                    The Wordington graduate diploma in HRM comprises of four units which
-                    can be credited towards Wordington Master of Human Resource
-                    Management.
+                    The Wordington graduate diploma in Leadership comprises of four units
+                    which can be credited towards Wordington Master of Leadership.
+                </div>
+                <div>
+                    The units offered are:
                 </div>
                 <div class="x-x-x">
-                        The units offered are: <br> <br>
-
-                        Ethics and HRM. <br> <br>
-
-                        Managing Diversity. <br> <br>
-
-                        Managing Effective Decision Making. <br> <br>
-
-                        Managing Teams. <br> <br>
+                    Ethics and Leadership. <br> <br>
+                    Leading Diversity. <br> <br>
+                    Leadership and Decision Making. <br> <br>
+                    Leading Teams. <br> <br>
                 </div>
             </div>
         </div>
