--- a/html/wordington-doctorate-programme-in-biblical-studies.html
+++ b/html/wordington-doctorate-programme-in-biblical-studies.html
@@ -10,10 +10,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <link rel="stylesheet" href="./leaderShip.css">
+    <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader14">
+    <div class="itemHeader12">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -41,29 +41,25 @@
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Wordington Certificate Programme in International English Writing Skills (3 months)</div>
+                <div class="title">Doctorate in Leadership </div>
                 <div>
-                    Wordington Certificate Programme in English Writing Skills is designed
-                    to develop excellent English writing skills through structural construction
-                    of sentences.
+                    Wordington Doctorate is a highly specialised (2-5 years duration)
+                    programme designed for established Christian leaders.
                 </div>
                 <div>
-                    The primary objective of this programme is to help candidates to gain
-                    confidence in communicating in English, both in the formal and informal
-                    settings. This means, this programme will equip you to write emails,
-                    send formal letters and draft business proposals, as well as excellent
-                    business communication.
+                    Please refer to <a href="#">Wordington Model</a>  to see how the research is designed.
                 </div>
                 <div>
-                    Upon completion of this course, candidates will be able to excel in
-                    vocabulary to draft meaningful sentences and produce clear and correct
-                    writings.
+                    The Wordington doctoral programme is your unique journey through the
+                    world of Biblical knowledge and experiences interwoven.
                 </div>
                 <div>
-                    The programme involves a series of practical sessions and will help the
-                    candidates to be professional writers.
+                    As part of this programme you will lead by yourselves and Wordington
+                    will support you in your doctoral journey.
                 </div>
-                <div>  Please <a href="#">email us </a> for more details and fees.</div>
+                <div class="x-x-x">
+                    Please <a href="#"> email us</a>  for more details and fees.
+                </div>
             </div>
         </div>
     </div>
