--- a/html/wordington-health-and-nursing-programmes.html
+++ b/html/wordington-health-and-nursing-programmes.html
@@ -10,10 +10,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <link rel="stylesheet" href="./leaderShip.css">
+    <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader4">
+    <div class="itemHeader13">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -34,40 +34,32 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Leadership Programmes
+            Wordington Doctorate Programme in
+            Biblical studies
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Wordington Leadership Programmes </div>
+                <div class="title">Certificate Programmes ( 3-6 months) </div>
                 <div>
-                    is aimed to equip candidates with
-                    agile skills to lead organisations and the society.
+                    Wordington Certificate Programme in Nursing Leadership is designed to
+                    develop and establish a strong foundation in selective knowledge,
+                    understanding and application of key nursing leadership concepts.
                 </div>
                 <div>
-                    Wordington graduate diploma programmes are suitable for people
-                    working in any profession and is a great opportunity to build up and
-                    boost your leadership skills.
+                    Wordington offers Nursing Leadership Certificate programme to prepare
+                    you for a nursing career in western countries.
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of leadership styles so as to effectively lead others and
-                    their businesses and organisations.
-                </div>
-                <div>
-                    The Wordington graduate diploma in Leadership comprises of four units
-                    which can be credited towards Wordington Master of Leadership.
-                </div>
-                <div>
-                    The units offered are:
+                    This programme is meant for a successful nursing career and aim to
+                    equip the candidates to be leaders in hospitals and nursing cares.
                 </div>
                 <div class="x-x-x">
-                    Ethics and Leadership. <br> <br>
-                    Leading Diversity. <br> <br>
-                    Leadership and Decision Making. <br> <br>
-                    Leading Teams. <br> <br>
+                    Please click on the below link for more details:
                 </div>
+                <div> <a href="#"> Introduction to Nursing Leadership. </a> </div>
+                <div>  Please <a href="#">email us </a> for more details and fees.</div>
             </div>
         </div>
     </div>
