--- a/html/wordington-diploma-in-human-resource-management-programme.html
+++ b/html/wordington-diploma-in-human-resource-management-programme.html
@@ -10,10 +10,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <link rel="stylesheet" href="./leaderShip.css">
+    <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader5">
+    <div class="itemHeader6">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -34,48 +34,41 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Certificate Programme in Human Resource Management
+            Graduate Diploma in Human Resource Management 
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Certificate Programmes  </div>
+                <div class="title">Graduate Diploma in Human Resource Management  </div>
                 <div>
-                    Wordington Certificate Programmes in Human Resource Management
-                    (HRM) are designed to develop and establish a strong foundation for
-                    those aiming to build up a successful career in HRM.
+                    is aimed to equip candidates with agile skills to lead the workforce in organisations.
                 </div>
                 <div>
-                    Wordington offers a range of Certificate programmes for you to advance
-                    in your HRM skills. This programme is meant for beginners who are
-                    aiming for a career in HRM. A few of the Certificate Programmes is listed
-                    below:
+                    Wordington graduate diploma programme is suitable for people working
+                    in any profession and is a great opportunity to build up and boost your
+                    HRM skills.
+                </div>
+                <div>
+                    The programme is suitable for those wishing to further develop their
+                    understanding of HRM so as to effectively manage people in
+                    organisations.
+                </div>
+                <div>
+                    The Wordington graduate diploma in HRM comprises of four units which
+                    can be credited towards Wordington Master of Human Resource
+                    Management.
                 </div>
                 <div class="x-x-x">
-                    Wordington Certificate in:
+                        The units offered are: <br> <br>
 
-                    Fundamentals of Human Resource Management. <br> <br>
+                        Ethics and HRM. <br> <br>
 
-                    Strategic Human Resource Management.<br> <br>
+                        Managing Diversity. <br> <br>
 
-                    Industrial Relations.<br> <br>
+                        Managing Effective Decision Making. <br> <br>
 
-                    Human Resource Planning.<br> <br>
-
-                    Job Design.<br> <br>
-
-                    Recruitment and Selection.<br> <br>
-
-                    Training and Development.<br> <br>
-
-                    Performance Management.<br> <br>
-
-                    Rewards Management.<br> <br>
-
-                    Health and Safety.<br> <br>
-
-                    Managing Decision Making.<br> <br>
+                        Managing Teams. <br> <br>
                 </div>
             </div>
         </div>
