--- a/html/wordington-doctorate-programme-in-human-resource-management.html
+++ b/html/wordington-doctorate-programme-in-human-resource-management.html
@@ -10,10 +10,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <link rel="stylesheet" href="./leaderShip.css">
+    <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader9">
+    <div class="itemHeader8">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -34,51 +34,31 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Certificate Programme in Biblical Studies
+            Wordington Doctorate Programme in Human
+            Resource Management.
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Certificate Programmes </div>
+                <div class="title">Doctorate in Leadership </div>
                 <div>
-                    Wordington Certificate Programme in Biblical studies is designed to
-                    develop and establish a strong foundation in selective knowledge,
-                    understanding and application of key Biblical concepts.
+                    Wordington Doctorate is a highly specialised (4-10 years duration)
+                    programme designed for established leaders in their chosen profession.
                 </div>
                 <div>
-                    
-                    Wordington offers a range of Certificate programmes for you to advance
-                    in Biblical studies. This programme is meant for beginners who are
-                    aiming to build their understanding of Biblical knowledge and build a
-                    ‘call-oriented’ career in Christian ministry. A few of the Certificate
-                    Programmes is listed below:
+                    Please refer to Wordington Model to see how the research is designed.
                 </div>
-                <div class="x-x-x">
-                    Wordington Certificate in: <br> <br>
-
-                    Introduction to Old Testament. <br> <br>
-
-                    Introduction to New Testament.<br> <br>
-
-                    The Gospel of Matthew.<br> <br>
-
-                    The Gospel of Mark.<br> <br>
-
-                    The Gospel of Luke.<br> <br>
-
-                    The Gospel of John.<br> <br>
-
-                    The Acts of Apostles.<br> <br>
-
-                    Introduction to Pauline Letters.<br> <br>
-
-                    The Letters of John.<br> <br>
-
-                    The Letters of Peter.<br> <br>
-
-                    The Letter of James.<br> <br>
-                    The Book of Revelations<br> <br>
+                <div>
+                    The Wordington doctoral programme is your unique journey through the
+                    world of knowledge and experiences interwoven.
+                </div>
+                <div>
+                    As part of this programme you will lead by yourselves and Wordington
+                    will support you in your doctoral journey.
+                </div>
+                <div>
+                    Please <a href="#">email us</a>  for more details and fees.
                 </div>
             </div>
         </div>
