--- a/html/wordington-leadership-certificate-programme.html
+++ b/html/wordington-leadership-certificate-programme.html
@@ -10,10 +10,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <link rel="stylesheet" href="./leaderShip.css">
+    <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader3">
+    <div class="itemHeader1">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="index.html" style="color: white;">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         
                     </ul>
                 </div>
@@ -34,39 +34,37 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Leadership Programmes
+            Wordington Leadership Certificate Programme  
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Wordington Leadership Programmes </div>
+                <div class="title">Certificate Programmes</div>
                 <div>
-                    is aimed to equip candidates with
-                    agile skills to lead organisations and the society.
+                    Wordington Certificate Programmes in Human Resource Management
+                    (HRM) are designed to develop and establish a strong foundation for
+                    those aiming to build up a successful career in HRM.
                 </div>
                 <div>
-                    Wordington graduate diploma programmes are suitable for people
-                    working in any profession and is a great opportunity to build up and
-                    boost your leadership skills.
-                </div>
-                <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of leadership styles so as to effectively lead others and
-                    their businesses and organisations.
-                </div>
-                <div>
-                    The Wordington graduate diploma in Leadership comprises of four units
-                    which can be credited towards Wordington Master of Leadership.
-                </div>
-                <div>
-                    The units offered are:
+                    Wordington offers a range of Certificate programmes for you to advance
+                    in your HRM skills. This programme is meant for beginners who are
+                    aiming for a career in HRM. A few of the Certificate Programmes is listed
+                    below:
                 </div>
                 <div class="x-x-x">
-                    Ethics and Leadership. <br> <br>
-                    Leading Diversity. <br> <br>
-                    Leadership and Decision Making. <br> <br>
-                    Leading Teams. <br> <br>
+                    Wordington Certificate in: <br> <br>
+                    Fundamentals of Human Resource Management. <br> <br>
+                    Strategic Human Resource Management. <br> <br>
+                    Industrial Relations. <br> <br>
+                    Human Resource Planning. <br> <br>
+                    Job Design. <br> <br>
+                    Recruitment and Selection. <br> <br>
+                    Training and Development.  <br> <br>
+                    Performance Management.<br> <br>
+                    Rewards Management.<br> <br>
+                    Health and Safety.<br> <br>
+                    Managing Decision Making.<br> <br>
                 </div>
             </div>
         </div>
