--- a/html/about-us.html
+++ b/html/about-us.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
     <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
-    <link rel="stylesheet" href="./leaderShip.css">
+    <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
     <div class="about-us">
