--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
                             <div onclick="scrollToElement('html,body', '.content', 0)"> <a href="#"> LOUR MODEL</a> </div>
                         </li>
                         <li>
-                            <div onclick="scrollToElement('html,body', 'leadership-programmes', 0)"> <a href="#"> LEADERSHIP
+                            <div onclick="scrollToElement('html,body', '.leadership-programmes', 0)"> <a href="#"> LEADERSHIP
                                     PROGRAMMES</a> </div>
                         </li>
                         <li>
