--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/">
     <link rel="stylesheet" href="../css/animate.min.css">
     <script src="../js/wow.min.js"></script>
     <script src="../js/font.js"></script>
