--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../css/">
+    <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="../css/animate.min.css">
     <script src="../js/wow.min.js"></script>
     <script src="../js/font.js"></script>
@@ -15,7 +15,7 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="header">
+    <div class="header wow bounceIn">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="text">
-                <div class="introduce wow bounceInDown">
+                <div data-wow-delay="0s" class="introduce wow bounceInDown">
                     <div class="">Wordington Centre</div>
                     for Leadership and Management Development
                 </div>
@@ -61,7 +61,7 @@
         </div>
     </div>
  <a href="about-us.html">
-        <div class="aboutUs wow fadeInLeftBig">
+        <div data-wow-delay="0.1s" class="aboutUs wow fadeInUp">
             <div>
                 ABOUT-US
             </div>
@@ -75,7 +75,7 @@
             Wordington Model
         </div>
         <div class="container">
-            <div class="text-content wow fadeInUpBig">
+            <div data-wow-delay="0.2s" class="text-content wow fadeInUp">
                 <div>The Wordington Model is the result of many years of extensive research. Our quest on a model that
                     would make education meaningful enabled us to think of ways and means to generate knowledge
                     from lived experiences. </div> <br>
@@ -101,7 +101,7 @@
         </div>
     </div>
        <div>
-        <div class="leadership-programmes wow fadeInUpBig">
+        <div data-wow-delay="0.2s" class="leadership-programmes wow fadeInUp">
             <div class="text-content-in-image">
                 Wordington Leadership Programmes
             </div>
@@ -111,7 +111,7 @@
         </div>
         <div class="container">
             <div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceInDown">
+                <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-leadership-certificate-programme.html">
                         <div class="image">
                             <img src="../image/image1.svg" alt="">
@@ -121,7 +121,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceInDown">
+                <div data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-leadership-programme.html">
                         <div class="image">
                             <img src="../image/image2.svg" alt="">
@@ -131,7 +131,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceInDown">
+                <div data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-master-of-leadership-programme.html">
                         <div class="image">
                             <img src="../image/image3.svg" alt="">
@@ -141,7 +141,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceInDown">
+                <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-leadership.html">
                         <div class="image">
                             <img src="../image/image4.svg" alt="">
@@ -155,7 +155,7 @@
         </div>
     </div>
     <div>
-        <div data-wow-delay="0.3s" class="managament-programmes wow fadeInDownBig">
+        <div data-wow-delay="0.2s" class="managament-programmes wow fadeInUp">
             <div class="text-content-in-image">
                 Wordington Management Programmes
             </div>
@@ -165,7 +165,7 @@
         </div>
         <div class="container">
             <div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceIn">
+                <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-certificate-programme-in-human-resource-management.html">
                         <div class="image">
                             <img src="../image/image5.svg" alt="">
@@ -175,7 +175,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceIn">
+                <div data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-human-resource-management-programme.html">
                         <div class="image">
                             <img src="../image/image6.svg" alt="">
@@ -185,7 +185,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceIn">
+                <div data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-master-of-human-resource-management-programme.html">
                         <div class="image">
                             <img src="../image/image7.svg" alt="">
@@ -195,7 +195,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceIn">
+                <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-human-resource-management.html">
                         <div class="image">
                             <img src="../image/image8.svg" alt="">
@@ -209,7 +209,7 @@
         </div>
     </div>
   <div>
-        <div class="biblical-studies-programmes wow fadeInUpBig">
+        <div data-wow-delay="0.2s" class="biblical-studies-programmes wow fadeInUp">
             <div class="text-content-in-image">
                 Wordington Biblical Studies Programmes
             </div>
@@ -219,7 +219,7 @@
         </div>
         <div class="container">
             <div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceInUp">
+                <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-certificate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image9.svg" alt="">
@@ -229,7 +229,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceInUp">
+                <div data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-biblical-leadership.html">
                         <div class="image">
                             <img src="../image/image10.svg" alt="">
@@ -239,7 +239,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceInUp">
+                <div data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-graduate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image11.svg" alt="">
@@ -249,7 +249,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-12 col-md-6 item-category wow bounceInUp">
+                <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image12.svg" alt="">
@@ -264,14 +264,14 @@
     </div>
     <div>
         <a href="wordington-health-and-nursing-programmes.html">
-            <div class="healh-and-nursing-programmes wow fadeInDownBig" id="health">
+            <div data-wow-delay="0.1s" class="healh-and-nursing-programmes wow fadeInUp" id="health">
                 <div class="text-content-in-image">
                     Wordington Health and Nursing Programmes
                 </div>
             </div>
         </a>
         <div class="container item-alone">
-            <div class="col-xs-12 col-sm-12 col-md-8 item-category wow bounceIn">
+            <div data-wow-delay="0.2s" class="col-xs-12 col-sm-12 col-md-8 item-category wow fadeInUp">
                 <a href="wordington-graduate-programme-in-biblical-studies.html">
                     <div class="image-1">
                         <img src="../image/cccccc.svg" alt="">
@@ -285,14 +285,14 @@
     </div>
     <div>
         <a href="wordington-international-english-communication-programme.html">
-            <div class="international wow fadeInDownBig">
+            <div data-wow-delay="0.3s" class="international wow fadeInUp">
                 <div class="text-content-in-image">
                     Wordington International English Communication Programme
                 </div>
             </div>
         </a>
         <div class="container item-alone">
-            <div class="col-xs-12 col-sm-12 col-md-8 item-category wow bounceIn">
+            <div data-wow-delay="0.4s" class="col-xs-12 col-sm-12 col-md-8 item-category wow fadeInUp">
                 <a href="wordington-graduate-programme-in-biblical-studies.html">
                     <div class="image-1">
                         <img src="../image/zzzz.svg" alt="">
@@ -324,7 +324,7 @@
     function closeMenu() {
         show.style.right = "-250px";
     }
-    new WOW().init() 
+    new WOW().init();
     function scrollToElement(parentSelector, targetSelector, offsetTop) {
         $(parentSelector).animate({
             scrollTop: $(targetSelector).offset().top - (offsetTop ? offsetTop : 0)
