--- a/html/wordington-doctorate-programme-in-human-resource-management.html
+++ b/html/wordington-doctorate-programme-in-human-resource-management.html
@@ -8,12 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel='stylesheet' href='https://cdn.rawgit.com/daneden/animate.css/v3.1.0/animate.min.css'>
-    <script src='https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js'></script>
+    <link rel='stylesheet' href='../css/animate.min.css'>
+    <script src='../js/wow.min.js'></script>
     <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader8">
+    <div class="itemHeader8 wow bounceInDown">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -83,4 +83,5 @@
     function closeMenu() {
         show.style.right = "-250px";
     }
+    new WOW().init();
 </script>
